# projekt-2-lukaszk22

./: CMakeLists.txt
include/: LinAlg.hpp
src/: main.cpp
